docker/kubernetes-deployments/aws/broker.yaml
apiVersion: apps/v1
kind: StatefulSet
namespace: default
metadata:
  name: cloud-broker-cluster
spec:
  selector:
    matchLabels:
      app: cloud-broker-cluster
  replicas: 3
  serviceName: cloud-broker-internal
  template:
    metadata:
      labels:
        app: cloud-broker-cluster
    spec:
      subdomain: "cloud-broker-internal"
      podManagementPolicy: Parallel
      dnsConfig:
        searches:
        - cloud-broker-internal.default.svc.cluster.local
      containers:
      - name: broker-cluster
        image: "582161142462.dkr.ecr.us-west-2.amazonaws.com/broker-scala-performance:latest"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        serviceName: "cloud-broker-internal"
        ports:
        - containerPort: 9000
        - containerPort: 9005
        - containerPort: 2551
        - containerPort: 8558
        - containerPort: 9443
        resources:
          requests:
            memory: "3500Mi"
            cpu: "1700m"
          limits:
            memory: "6500Mi"
            cpu: "3700m"
---
apiVersion: apps/v1
kind: Deployment
namespace: default
metadata:
  name: cloud-broker-cluster-squad
spec:
  selector:
    matchLabels:
      app: cloud-broker-cluster-squad
  replicas: 3
  serviceName: cloud-broker-internal-squad
  template:
    metadata:
      labels:
        app: cloud-broker-cluster-squad
    spec:
      subdomain: "cloud-broker-internal-squad"
      dnsConfig:
        searches:
        - cloud-broker-internal.default.svc.cluster.local
      podManagementPolicy: Parallel
      containers:
      - name: broker-cluster-squad
        image: "582161142462.dkr.ecr.us-west-2.amazonaws.com/broker-scala-performance:latest"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        serviceName: "cloud-broker-internal"
        ports:
        - containerPort: 9000
        - containerPort: 9005
        - containerPort: 2551
        - containerPort: 8558
        - containerPort: 9443
        resources:
          requests:
            memory: "3500Mi"
            cpu: "1700m"
          limits:
            memory: "6500Mi"
            cpu: "3700m"
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-broker-internal
  labels:
    app: cloud-broker-cluster
spec:
  ports:
  - port: 2551
    targetPort: 2551
    protocol: TCP
  selector:
    app: cloud-broker-cluster
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-broker-external
  labels:
    app: cloud-broker-cluster
spec:
  ports:
  - name: dsabroker-webinterface
    port: 9000
    targetPort: 9000
    nodePort: 30001
  - name: dsa-9005
    port: 9005
    targetPort: 9005
    nodePort: 30002
  selector:
    app: cloud-broker-cluster
  status: loadBalancer
  type: NodePort
  externalTrafficPolicy: Cluster
