docker/kubernetes-deployments/aws/direct.services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-broker-cluster-0-service
  labels:
    label: cloud-broker-cluster-0-service
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 0.0.0.0/0
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    statefulset.kubernetes.io/pod-name: cloud-broker-cluster-0
